feat(auth): add OIDC authentication support
- Implement OIDC login flow with PKCE, nonce validation, and CSRF protection
- Add account linking/unlinking functionality for authenticated users
- Update UI with OIDC status column, avatar dropdown integration, and error page
- Add database migrations for user OIDC links and profile storage
- Include server functions for OIDC operations and admin management
- Support dynamic OIDC provider configuration via server options

--- a/crates/rb-types/Cargo.toml
+++ b/crates/rb-types/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 sqlx = ["dep:sqlx"]
 secrecy = ["dep:secrecy"]
 clap = ["dep:clap"]
+openidconnect = ["dep:openidconnect"]
+ssh-key = ["dep:ssh-key"]
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
@@ -15,3 +17,5 @@ sqlx = { workspace = true, default-features = false, features = [
 ], optional = true }
 secrecy = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
+openidconnect = { workspace = true, optional = true }
+ssh-key = { workspace = true, optional = true }
