--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ tower = "0.5.2"
 tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
 unicode-width = "0.1"
 reqwest = { version = "0.12", features = ["json"] }
+openidconnect = { version = "3", features = ["reqwest"] }
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
