--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -27,6 +27,8 @@ server = [
     "sqlx",
     "async-trait",
     "rb-types/sqlx",
+    "openidconnect",
+    "url",
 ]
 
 [dependencies]
@@ -61,3 +63,6 @@ axum_session_auth = { version = "0.17", optional = true }
 axum_session_sqlx = { version = "0.6", optional = true, features = ["sqlite"] }
 sqlx = { workspace = true, features = ["sqlite"], optional = true }
 async-trait = { workspace = true, optional = true }
+openidconnect = { workspace = true, optional = true }
+url = { workspace = true, optional = true }
+urlencoding = "2.1.3"
